0.09002 2011-03-21

    - Hopefully fix IO::Interactive dependency properly

0.09001 2011-03-31

    - Fix IO::Interactive dependency

0.09000 2011-03-29

    - Codebase changed to use Moose - massive internal changes - any custom
      Elements, Constraints, etc will require changes.
      See advice on mailing list:
      http://www.mail-archive.com/html-formfu@lists.scsys.co.uk/msg02325.html
      Or ask for help on the mailing list:
      http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/html-formfu
    
    - Bug fix: was a fatal error when a value was submitted for Label element
      (code called delete_nested_hash_value instead of deleted_nested_hash_key).
    
    - Bug fix: RT#65728 Filter::Split shouldn't return a value if no value was
      submitted.
    
    - Bug fix: Element::Date now uses default() in preference to
      default_natural(). RT#65727
    
    - DateTime elements, minutes and seconds have new 'interval' option.
    
    - Now only delete submitted value if there's no other field on the form with
      the same name.
    
    - load_config_file(stem) now honours the include path order, to mimic TT
      behaviour.

0.08002 2010-09-22

    - Incompatible Change: removed all previously deprecated methods.
    
    - Incompatible Change: HTML::FormFu::QueryType::Catalyst
      File uploads under Catalyst no longer have copy_to(), link_to() and
      catalyst_upload() methods
    
    - Deprecated passing multiple arguments to many methods, where they were
      being implicitly converted to a hash-ref or array-ref.
      A warning is now issued.
    
    - Fix: Constraint::Equal with not(1) set no longer sets an error when both
      field values are empty strings.
    
    - Fix: An empty block with nested_name set, containing Label elements and
      no other fields, was causing the block's nested_name to be added to
      $form->valid(). RT #54967
    
    - Constraints that inherit from HTML::FormFu::Constraint::_others have a new